syntax = "proto3";

package sum;


service sumService {
	// Unary API
	rpc Sum (SumRequest) returns (SumResponse) {};
}

message Sum {
	int32 first_no = 1;
	int32 second_no = 2;
}

message SumRequest {
	Sum sum = 1;
}

message SumResponse {
	int32 result = 1;
}

